[package]
name = "unicbor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.160", default-features = false }
half = { version = "2.2.1", default-features = false, features = ["num-traits"] }
heapless = "0.7.16"
num-traits = "0.2.15"
num-bigint = { version = "0.4.3", default-features = false, optional = true }
cfg-if = "1.0.0"

[dev-dependencies]
test-case = "3.1.0"
hex = "0.4.3"
serde = { version = "1.0.160", default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11.9", default-features = false }

[features]
default = ["std"]
std = ["alloc", "serde/std"]
alloc = ["serde/alloc", "dep:num-bigint", "serde_bytes/alloc"]
